--- a/example.html
+++ b/example.html
@@ -358,7 +358,7 @@ Andrie de Vries
   <script src="example_files/libs/revealjs/plugin/pdf-export/pdfexport.js"></script>
   <script src="example_files/libs/revealjs/plugin/reveal-menu/menu.js"></script>
   <script src="example_files/libs/revealjs/plugin/reveal-menu/quarto-menu.js"></script>
-  <script src="example_files/libs/revealjs/plugin/gong/gong.js"></script>
+  <script src="example_files/libs/revealjs/plugin/gongtimer/gong.js"></script>
   <script src="example_files/libs/revealjs/plugin/quarto-support/support.js"></script>
   
 
@@ -380,7 +380,7 @@ Andrie de Vries
 'autoAnimateDuration': 1,
 'autoAnimateUnmatched': true,
 'menu': {"side":"left","useTextContentForMissingTitles":true,"markers":false,"loadIcons":false,"custom":[{"title":"Tools","icon":"<i class=\"fas fa-gear\"></i>","content":"<ul class=\"slide-menu-items\">\n<li class=\"slide-tool-item active\" data-item=\"0\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.fullscreen(event)\"><kbd>f</kbd> Fullscreen</a></li>\n<li class=\"slide-tool-item\" data-item=\"1\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.speakerMode(event)\"><kbd>s</kbd> Speaker View</a></li>\n<li class=\"slide-tool-item\" data-item=\"2\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.overview(event)\"><kbd>o</kbd> Slide Overview</a></li>\n<li class=\"slide-tool-item\" data-item=\"3\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.togglePdfExport(event)\"><kbd>e</kbd> PDF Export Mode</a></li>\n<li class=\"slide-tool-item\" data-item=\"4\"><a href=\"#\" onclick=\"RevealMenuToolHandlers.keyboardHelp(event)\"><kbd>?</kbd> Keyboard Help</a></li>\n</ul>"}],"openButton":true},
-'gong': {"0":{"allottedTime":3},"allottedTime":5,"progressBarHeight":3,"barColor":"rgb(200,0,0)","pausedBarColor":"rgba(200,0,0,.6)"},
+'gongtimer': {"0":{"allottedTime":1},"allottedTime":5,"progressBarHeight":3,"barColor":"rgb(200,0,0)","pausedBarColor":"rgba(200,0,0,.6)"},
 'smaller': false,
  
         // Display controls in the bottom right corner
@@ -551,7 +551,7 @@ Andrie de Vries
         },
 
         // reveal.js plugins
-        plugins: [QuartoLineHighlight, PdfExport, RevealMenu, gong, QuartoSupport,
+        plugins: [QuartoLineHighlight, PdfExport, RevealMenu, gongtimer, QuartoSupport,
 
           RevealMath,
           RevealNotes,
